--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ p{
   padding-left: 10px;
   font-size: 12px;
 }
-@media (max-width:600px) {
+@media (min-width:600px) {
   .input1,.input2{
     position: relative;
     left: 50px; 
